--- a/log.html
+++ b/log.html
@@ -1727,25 +1727,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,9514],[],[[4,0,1,0,[],[1,79,9433],[[0,5,0,0,0,0,0,0,[1,79,9432],[[0,6,7,0,8,9,0,0,[1,80,9295],[],[[80,2,10]]],[0,11,7,0,12,0,0,0,[1,9376,19],[],[]],[0,13,7,0,14,0,0,0,[1,9395,116],[],[]]],[]]]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,7406],[],[[4,0,1,0,[],[1,71,7333],[[0,5,0,0,0,0,0,0,[1,72,6973],[[0,6,7,0,8,9,0,0,[1,72,6970],[],[[72,2,10]]],[0,11,7,0,12,0,0,0,[1,7042,3],[],[]]],[]],[0,13,0,0,0,0,0,0,[1,7045,164],[[0,14,7,0,15,16,0,0,[1,7046,163],[],[[7047,2,17]]]],[]],[0,18,0,0,0,0,0,0,[1,7210,194],[[0,19,7,0,20,21,0,0,[1,7210,99],[],[[7211,2,22]]],[0,23,7,0,24,0,0,0,[1,7309,95],[],[]]],[]]]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*firstTest","*/home/prachi/gitHub/Prachi-rampUp/firstTest.robot","*firstTest.robot","*[TC-001]-Launching the browser and search and launch the Google.com","*Launch Browser","*Open Browser","*Selenium2Library","*<p>Opens a new browser instance to given URL.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'firefox' to base url '<a href=\"https://www.amazon.in\">https://www.amazon.in\x3c/a>'","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*firstTest","*/home/prachi/gitHub/Prachi-rampUp/firstTest.robot","*firstTest.robot","*[TC-001]-Launching the browser and search and launch the Google.com","*Launch Browser","*Open Browser","*Selenium2Library","*<p>Opens a new browser instance to given URL.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'firefox' to base url '<a href=\"https://www.google.co.in/\">https://www.google.co.in/\x3c/a>'","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Search for the amazon website","*Input Text","*<p>Types the given `text` into text field identified by `locator`.\x3c/p>","*id=lst-ib, amazon.in","*Typing text 'amazon.in' into text field 'id=lst-ib'","*Click on the Search Button","*Click Button","*<p>Clicks a button identified by `locator`.\x3c/p>","*name=btnG","*Clicking button 'name=btnG'.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"firstTest","name":"firstTest","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"firstTest","name":"firstTest","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1495187277619;
+window.output["baseMillis"] = 1495455464714;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 9537;
+window.output["generated"] = 7421;
 </script>
 <script type="text/javascript">
 window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","splitLogBase":"log","title":""};
